<resources>
    <string name="app_name">QuickLauncher</string>
    <string name="refresh">refresh</string>
    <string name="done">done</string>
    <string name="settings">Settings</string>
    <string name="accessibility_request">Please grant accessibility permission to this app.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="gesture_settings">Gesture Settings</string>
    <string name="upwards">Upwrads</string>
    <string name="towards_left">TowardsLeft</string>
    <string name="downwards">Downwards</string>
    <string name="towards_right">TowardsRight</string>

    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="recent">Recent</string>
    <string name="notification">Notification</string>
</resources>
